--- a/src/main/resources/styles/EditCardsView.css
+++ b/src/main/resources/styles/EditCardsView.css
@@ -1,8 +1,7 @@
 
-
 .node-border {
-    -fx-border-insets:  5,23,5,23;
-    -fx-background-insets:  5,23,5,23;
+    -fx-border-insets: 5, 23, 5, 23;
+    -fx-background-insets: 5, 23, 5, 23;
     -fx-background-radius: 6;
     -fx-border-radius: 6;
     -fx-border-color: gray;
@@ -13,9 +12,35 @@
 
 /* class styles for AutoCompleteTextField */
 .validation-error {
-    -fx-text-box-border: #DBB1B1 ;
-    -fx-control-inner-background: #FFF0F0 ;
-    -fx-focus-color: #FF2020 ;
-    -fx-faint-focus-color: #FF202020 ;
+    -fx-text-box-border: #DBB1B1;
+    -fx-control-inner-background: #FFF0F0;
+    -fx-focus-color: #FF2020;
+    -fx-faint-focus-color: #FF202020;
 }
 
+#green-button {
+    -fx-background-color: linear-gradient(#889727, #689800),
+    radial-gradient(center 50% -40%, radius 200%, #5b7a1f 45%, #3e6a00 50%);
+    -fx-background-insets: 0, 1, 2, 3;
+    -fx-background-radius: 3, 2, 2, 2;
+    -fx-padding: 7 0 7 0;
+    -fx-font-family: "Times New Roman", "FreeSerif";
+    -fx-font-size: 1.1em;
+    -fx-text-fill: white;
+    -fx-pref-width: 120px;
+    -fx-max-width: 120px;
+}
+
+#green-button Text {
+    -fx-effect: dropshadow(one-pass-box, rgba(0, 0, 0, 0.8), 0, 0.0, 0, 1);
+}
+
+#green-button:pressed {
+    -fx-scale-y: 0.9;
+    -fx-scale-x: 0.9;
+}
+
+#green-button:hover {
+    -fx-background-color: linear-gradient(#c3d838, #8dce00),
+    radial-gradient(center 50% -40%, radius 200%, #8ab92f 45%, #68b100 50%);
+}
