--- a/src/main/resources/styles/MainView.css
+++ b/src/main/resources/styles/MainView.css
@@ -1,11 +1,38 @@
 
 .node-border {
-    -fx-border-insets:  5,23,5,23;
-    -fx-background-insets:  5,23,5,23;
+    -fx-border-insets: 5, 23, 5, 23;
+    -fx-background-insets: 5, 23, 5, 23;
     -fx-background-radius: 6;
     -fx-border-radius: 6;
     -fx-border-color: gray;
     -fx-border-style: solid;
     -fx-border-width: 1;
     -fx-effect: dropshadow(three-pass-box, rgba(100, 100, 100, 1), 1, 0, 0, 0);
+}
+
+#dark-button {
+    -fx-background-color: #090a0c,
+    linear-gradient(#38424b 0%, #1f2429 20%, #191d22 100%),
+    linear-gradient(#20262b, #191d22),
+    radial-gradient(center 50% 0%, radius 100%, rgba(114, 131, 148, 0.9), rgba(255, 255, 255, 0));
+    -fx-background-insets: 0, 1, 2, 3;
+    -fx-background-radius: 3, 2, 2, 2;
+    -fx-padding: 7 0 7 0;
+    -fx-font-family: "Times New Roman", "FreeSerif";
+    -fx-font-size: 1.1em;
+    -fx-text-fill: white;
+    -fx-pref-width: 120px;
+    -fx-max-width: 120px;
+}
+
+#dark-button:pressed {
+    -fx-scale-y: 0.9;
+    -fx-scale-x: 0.9;
+}
+
+#dark-button:hover {
+    -fx-background-color: #090a0c,
+    linear-gradient(#38424b 0%, #1f2429 20%, #191d22 100%),
+    linear-gradient(#20262b, #191d22),
+    radial-gradient(center 50% 0%, radius 100%, rgba(165, 189, 214, 0.9), rgba(255, 255, 255, 0));
 }
