--- a/src/main/resources/styles/DeckView.css
+++ b/src/main/resources/styles/DeckView.css
@@ -69,3 +69,15 @@
     linear-gradient(#b7264e, #751241),
     linear-gradient(#e31d64, #a30e5b);
 }
+
+.text-field {
+    -fx-background-color: -fx-text-box-border, -fx-background ;
+    -fx-background-insets: 0, 0 0 1 0 ;
+    -fx-background-radius: 0;
+    -fx-font-family: "Times New Roman", "FreeSerif";
+    -fx-font-size: 1.3em;
+
+}
+.text-field:focused {
+    -fx-background-color: -fx-focus-color, -fx-background ;
+}
