--- a/src/main/resources/styles/NewDeckView.css
+++ b/src/main/resources/styles/NewDeckView.css
@@ -53,5 +53,18 @@
 }
 
 
+.text-field {
+    -fx-background-color: -fx-text-box-border, -fx-background ;
+    -fx-background-insets: 0, 0 0 1 0 ;
+    -fx-background-radius: 0;
+    -fx-font-family: "Times New Roman", "FreeSerif";
+    -fx-font-size: 1.3em;
 
+}
+.text-field:focused {
+    -fx-background-color: -fx-focus-color, -fx-background ;
+}
 
+.text-area .content {
+    -fx-background-color: transparent;
+}
