--- a/src/main/resources/styles/SettingsView.css
+++ b/src/main/resources/styles/SettingsView.css
@@ -2,7 +2,12 @@
 
 .label {
     -fx-font-family: "Times New Roman", "FreeSerif";
-    -fx-font-size: 1.4em;
+    -fx-font-size: 1.2em;
+}
+
+.radio-button{
+    -fx-font-family: "Times New Roman", "FreeSerif";
+    -fx-font-size: 1.2em;
 }
 
 
